Removing remove file location reference from unit test and moving said file to project tree

--- a/ZScript/ZScript.csproj
+++ b/ZScript/ZScript.csproj
@@ -162,6 +162,7 @@
     <None Include="ZScript.g4" />
     <None Include="Parsing\ANTLR\ZScript.tokens" />
     <None Include="Parsing\ANTLR\ZScriptLexer.tokens" />
+    <None Include="ZScript.licenseheader" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
