--- a/ZScript/ZScript.csproj
+++ b/ZScript/ZScript.csproj
@@ -55,7 +55,7 @@
     <Compile Include="CodeGeneration\RuntimeGenerationContext.cs" />
     <Compile Include="CodeGeneration\Definitions\TypeAliasDefinition.cs" />
     <Compile Include="CodeGeneration\Analysis\ExpressionTreeAnalyzer.cs" />
-    <Compile Include="CodeGeneration\Tokenization\IntermediateTokenList.cs" />
+    <Compile Include="CodeGeneration\Tokenization\IntermediaryTokenList.cs" />
     <Compile Include="Parsing\ANTLRExtend\ParserExtensions.cs" />
     <Compile Include="Runtime\Execution\Wrappers\Callables\ClassMethod.cs" />
     <Compile Include="Runtime\Execution\Wrappers\ICallableWrapper.cs" />
@@ -90,7 +90,7 @@
     <Compile Include="CodeGeneration\Tokenization\Statements\ForStatementTokenizer.cs" />
     <Compile Include="CodeGeneration\Tokenization\Statements\IfStatementTokenizer.cs" />
     <Compile Include="CodeGeneration\Tokenization\Helpers\JumpToken.cs" />
-    <Compile Include="CodeGeneration\Tokenization\Helpers\JumpTokenExpander.cs" />
+    <Compile Include="CodeGeneration\Tokenization\Helpers\JumpTokenOptimizer.cs" />
     <Compile Include="CodeGeneration\Tokenization\Helpers\JumpTargetToken.cs" />
     <Compile Include="CodeGeneration\Tokenization\PostfixExpressionTokenizer.cs" />
     <Compile Include="CodeGeneration\Tokenization\FunctionBodyTokenizer.cs" />
