--- a/ZScriptTests/ZScriptTests.csproj
+++ b/ZScriptTests/ZScriptTests.csproj
@@ -57,6 +57,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="CodeGeneration\Analysis\CodeScopeTests.cs" />
+    <Compile Include="CodeGeneration\Analysis\FunctionParametersAnalyzerTests.cs" />
     <Compile Include="CodeGeneration\Analysis\StaticTypeAnalyzerTests.cs" />
     <Compile Include="CodeGeneration\Analysis\ExpressionConstantResolverTests.cs" />
     <Compile Include="CodeGeneration\Analysis\ExpressionTypeResolverTests.cs" />
