--- a/ZScript/ZScript.csproj
+++ b/ZScript/ZScript.csproj
@@ -56,13 +56,17 @@
     <Compile Include="CodeGeneration\RuntimeGenerationContext.cs" />
     <Compile Include="CodeGeneration\Definitions\TypeAliasDefinition.cs" />
     <Compile Include="CodeGeneration\Analysis\ExpressionTypeAnalyzer.cs" />
+    <Compile Include="CodeGeneration\Tokenization\Helpers\TypedToken.cs" />
+    <Compile Include="CodeGeneration\Tokenization\Helpers\TypedTokenExpander.cs" />
     <Compile Include="CodeGeneration\Tokenization\IntermediaryTokenList.cs" />
     <Compile Include="Parsing\ANTLRExtend\ParserExtensions.cs" />
     <Compile Include="Runtime\Execution\Wrappers\Callables\ClassMethod.cs" />
     <Compile Include="Runtime\Execution\Wrappers\ICallableWrapper.cs" />
+    <Compile Include="Runtime\Typing\Elements\AnyTypeDef.cs" />
     <Compile Include="Runtime\Typing\Elements\CallableTypeDef.cs" />
     <Compile Include="Runtime\Typing\Elements\IListTypeDef.cs" />
     <Compile Include="Runtime\Typing\Elements\ListTypeDef.cs" />
+    <Compile Include="Runtime\Typing\Elements\NativeTypeDef.cs" />
     <Compile Include="Runtime\Typing\Elements\ObjectTypeDef.cs" />
     <Compile Include="Runtime\Typing\Elements\StringTypeDef.cs" />
     <Compile Include="CodeGeneration\DefinitionGenerator.cs" />
