--- a/ZScriptTests/ZScriptTests.csproj
+++ b/ZScriptTests/ZScriptTests.csproj
@@ -65,6 +65,7 @@
     <Compile Include="CodeGeneration\Analysis\UnusedDefinitionAnalyzerTests.cs" />
     <Compile Include="CodeGeneration\MultipleSourcesTests.cs" />
     <Compile Include="CodeGeneration\Tokenization\Helpers\JumpTokenOptimizerTests.cs" />
+    <Compile Include="CodeGeneration\Tokenization\Helpers\TypedTokenExpanderTests.cs" />
     <Compile Include="CodeGeneration\Tokenization\IntermediaryTokenListTests.cs" />
     <Compile Include="CodeGeneration\Tokenization\PostfixExpressionTokenizerTests.cs" />
     <Compile Include="CodeGeneration\Tokenization\StatementTokenizerTests.cs" />
