--- a/ZScript/ZScript.csproj
+++ b/ZScript/ZScript.csproj
@@ -61,6 +61,8 @@
     <Compile Include="CodeGeneration\Tokenization\Helpers\TypedToken.cs" />
     <Compile Include="CodeGeneration\Tokenization\Helpers\TypedTokenExpander.cs" />
     <Compile Include="CodeGeneration\Tokenization\IntermediaryTokenList.cs" />
+    <Compile Include="Elements\ZClass.cs" />
+    <Compile Include="Elements\ZMethod.cs" />
     <Compile Include="Parsing\ANTLRExtend\ParserExtensions.cs" />
     <Compile Include="Runtime\Execution\Wrappers\Callables\ClassMethod.cs" />
     <Compile Include="Runtime\Execution\Wrappers\ICallableWrapper.cs" />
