--- a/ZScriptTests/ZScriptTests.csproj
+++ b/ZScriptTests/ZScriptTests.csproj
@@ -90,7 +90,7 @@
     <Compile Include="Runtime\Execution\Wrappers\Members\ZClassMemberTests.cs" />
     <Compile Include="Runtime\Execution\Wrappers\Members\ZObjectMemberTests.cs" />
     <Compile Include="Runtime\Execution\Wrappers\MemberWrapperHelperTests.cs" />
-    <Compile Include="Runtime\Execution\Wrappers\Subscripters\LstSubscripterTests.cs" />
+    <Compile Include="Runtime\Execution\Wrappers\Subscripters\ListSubscripterTests.cs" />
     <Compile Include="Runtime\ExportFunctionTests.cs" />
     <Compile Include="Runtime\FunctionAccessTests.cs" />
     <Compile Include="Runtime\MemberTests.cs" />
