--- a/ZScript/ZScript.csproj
+++ b/ZScript/ZScript.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Runtime\Execution\Wrappers\Subscripters\ListSubscripterWrapper.cs" />
     <Compile Include="Runtime\Execution\Wrappers\Subscripters\ProperySubscripterWrapper.cs" />
     <Compile Include="Runtime\Typing\BinaryExpressionTypeProvider.cs" />
+    <Compile Include="Runtime\Typing\ICustomTypeSource.cs" />
     <Compile Include="Runtime\Typing\ITypeOperator.cs" />
     <Compile Include="Runtime\Execution\VirtualMemory\IMemory.cs" />
     <Compile Include="Runtime\Execution\VirtualMemory\Memory.cs" />
