Starting basic sequence parsing

--- a/ZScript/ZScript.csproj
+++ b/ZScript/ZScript.csproj
@@ -54,9 +54,11 @@
     <Compile Include="CodeGeneration\Analysis\ExpressionConstantResolver.cs" />
     <Compile Include="CodeGeneration\Analysis\ExpressionTypeResolver+BinaryExpression.cs" />
     <Compile Include="CodeGeneration\Analysis\ExpressionTypeResolver.cs" />
-    <Compile Include="CodeGeneration\Definitions\ClassFieldDefinition.cs" />
+    <Compile Include="CodeGeneration\Definitions\TypeFieldDefinition.cs" />
     <Compile Include="CodeGeneration\Definitions\MethodDefinition.cs" />
     <Compile Include="CodeGeneration\Definitions\LocalVariableDefinition.cs" />
+    <Compile Include="CodeGeneration\Definitions\SequenceDefinition.cs" />
+    <Compile Include="CodeGeneration\Definitions\TypeContainerDefinition.cs" />
     <Compile Include="CodeGeneration\RuntimeGenerationContext.cs" />
     <Compile Include="CodeGeneration\Definitions\TypeAliasDefinition.cs" />
     <Compile Include="CodeGeneration\Analysis\ExpressionTypeAnalyzer.cs" />
