--- a/ZScript/ZScript.csproj
+++ b/ZScript/ZScript.csproj
@@ -60,6 +60,7 @@
     <Compile Include="CodeGeneration\Definitions\LocalVariableDefinition.cs" />
     <Compile Include="CodeGeneration\Definitions\SequenceDefinition.cs" />
     <Compile Include="CodeGeneration\Definitions\TypeContainerDefinition.cs" />
+    <Compile Include="CodeGeneration\Definitions\TypeAliasMethodDefinition.cs" />
     <Compile Include="CodeGeneration\RuntimeGenerationContext.cs" />
     <Compile Include="CodeGeneration\Definitions\TypeAliasDefinition.cs" />
     <Compile Include="CodeGeneration\Analysis\ExpressionTypeAnalyzer.cs" />
