--- a/ZScript/ZScript.csproj
+++ b/ZScript/ZScript.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Runtime\Typing\Elements\AnyTypeDef.cs" />
     <Compile Include="Runtime\Typing\Elements\CallableTypeDef.cs" />
     <Compile Include="Runtime\Typing\Elements\DictionaryTypeDef.cs" />
+    <Compile Include="Runtime\Typing\Elements\ICallableTypeDef.cs" />
     <Compile Include="Runtime\Typing\Elements\IListTypeDef.cs" />
     <Compile Include="Runtime\Typing\Elements\ListTypeDef.cs" />
     <Compile Include="Runtime\Typing\Elements\NativeTypeDef.cs" />
