Creating new function definition class for distinguishing top-level functions with closures and export functions (+ tests)

--- a/ZScript/ZScript.csproj
+++ b/ZScript/ZScript.csproj
@@ -55,6 +55,7 @@
     <Compile Include="CodeGeneration\Analysis\ExpressionTypeResolver+BinaryExpression.cs" />
     <Compile Include="CodeGeneration\Analysis\ExpressionTypeResolver.cs" />
     <Compile Include="CodeGeneration\Definitions\SequenceFrameDefinition.cs" />
+    <Compile Include="CodeGeneration\Definitions\TopLevelFunctionDefinition.cs" />
     <Compile Include="CodeGeneration\Definitions\TypeFieldDefinition.cs" />
     <Compile Include="CodeGeneration\Definitions\MethodDefinition.cs" />
     <Compile Include="CodeGeneration\Definitions\LocalVariableDefinition.cs" />
