Increasing code coverage of tests and fixing bug on chained assignment expression parsing

--- a/ZScriptTests/ZScriptTests.csproj
+++ b/ZScriptTests/ZScriptTests.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Runtime\Execution\Wrappers\Members\ZObjectMemberTests.cs" />
     <Compile Include="Runtime\Execution\Wrappers\MemberWrapperHelperTests.cs" />
     <Compile Include="Runtime\Execution\Wrappers\Subscripters\ListSubscripterTests.cs" />
+    <Compile Include="Runtime\Execution\Wrappers\Subscripters\PropertySubscripterWrapperTests.cs" />
     <Compile Include="Runtime\ExportFunctionTests.cs" />
     <Compile Include="Runtime\FunctionAccessTests.cs" />
     <Compile Include="Runtime\MemberTests.cs" />
