Adding unit test coverage for the DoubleOperator class

--- a/ZScriptTests/ZScriptTests.csproj
+++ b/ZScriptTests/ZScriptTests.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Runtime\MemberTests.cs" />
     <Compile Include="Runtime\ObjectLiteralTests.cs" />
     <Compile Include="Runtime\SubscriptingTests.cs" />
+    <Compile Include="Runtime\Typing\Operators\DoubleOperatorTests.cs" />
     <Compile Include="Runtime\Typing\TypeProviderTests.cs" />
     <Compile Include="Runtime\ZRuntimeTests.cs" />
     <Compile Include="Utils\TestRuntimeOwner.cs" />
