--- a/ZScriptTests/ZScriptTests.csproj
+++ b/ZScriptTests/ZScriptTests.csproj
@@ -77,6 +77,7 @@
     <Compile Include="CodeGeneration\Tokenization\IntermediaryTokenListTests.cs" />
     <Compile Include="CodeGeneration\Tokenization\PostfixExpressionTokenizerTests.cs" />
     <Compile Include="CodeGeneration\Tokenization\StatementTokenizerTests.cs" />
+    <Compile Include="Elements\TokenFactoryTests.cs" />
     <Compile Include="Elements\ZObjectTests.cs" />
     <Compile Include="Parsing\ConstantAtomParserTests.cs" />
     <Compile Include="Parsing\ValueParserTests.cs" />
