Adding more unit tests

--- a/ZScriptTests/ZScriptTests.csproj
+++ b/ZScriptTests/ZScriptTests.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Runtime\Execution\FunctionVmObjectTests.cs" />
     <Compile Include="Runtime\Execution\FunctionVmSubscriptingTests.cs" />
     <Compile Include="Runtime\Execution\FunctionVmTests.cs" />
+    <Compile Include="Runtime\Execution\VirtualMemory\MemoryTests.cs" />
     <Compile Include="Runtime\Execution\Wrappers\IndexedSubscripterTests.cs" />
     <Compile Include="Runtime\Execution\Wrappers\Members\ClassMemberTests.cs" />
     <Compile Include="Runtime\Execution\Wrappers\Members\ZClassMemberTests.cs" />
