. Fixing bug related to default values of variadic parameters (+ tests) . Adding unit tests to cover function argument generation on the Memory class . Adding unit tests for top-level function execution

--- a/ZScriptTests/ZScriptTests.csproj
+++ b/ZScriptTests/ZScriptTests.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Runtime\MemberTests.cs" />
     <Compile Include="Runtime\ObjectLiteralTests.cs" />
     <Compile Include="Runtime\SubscriptingTests.cs" />
+    <Compile Include="Runtime\TopLevelFunctionTests.cs" />
     <Compile Include="Runtime\Typing\Operators\DoubleOperatorTests.cs" />
     <Compile Include="Runtime\Typing\Operators\IntegerOperatorTests.cs" />
     <Compile Include="Runtime\Typing\Operators\LongOperatorTests.cs" />
