--- a/ZScript/ZScript.csproj
+++ b/ZScript/ZScript.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="CodeGeneration\Analysis\ClassDefinitionExpander.cs" />
     <Compile Include="CodeGeneration\Analysis\CodeScope.cs" />
+    <Compile Include="CodeGeneration\Analysis\ControlFlowAnalyzer.cs" />
     <Compile Include="CodeGeneration\Analysis\Definitions\FunctionParametersAnalyzer.cs" />
     <Compile Include="CodeGeneration\Analysis\Definitions\UnusedDefinitionsAnalyzer.cs" />
     <Compile Include="CodeGeneration\Analysis\StaticTypeAnalyzer.cs" />
