--- a/ZScript/ZScript.csproj
+++ b/ZScript/ZScript.csproj
@@ -74,6 +74,7 @@
     <Compile Include="CodeGeneration\Tokenization\Helpers\TypedTokenExpander.cs" />
     <Compile Include="CodeGeneration\Tokenization\IntermediaryTokenList.cs" />
     <Compile Include="Elements\ZClass.cs" />
+    <Compile Include="Elements\ZConstructor.cs" />
     <Compile Include="Elements\ZMethod.cs" />
     <Compile Include="Parsing\ANTLRExtend\ParserExtensions.cs" />
     <Compile Include="Runtime\Execution\Wrappers\Callables\ClassMethod.cs" />
