--- a/ZScriptTests/ZScriptTests.csproj
+++ b/ZScriptTests/ZScriptTests.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Runtime\Typing\Operators\DoubleOperatorTests.cs" />
     <Compile Include="Runtime\Typing\Operators\IntegerOperatorTests.cs" />
     <Compile Include="Runtime\Typing\Operators\LongOperatorTests.cs" />
+    <Compile Include="Runtime\Typing\OptionalTypeTests.cs" />
     <Compile Include="Runtime\Typing\TypeProviderTests.cs" />
     <Compile Include="Runtime\ZRuntimeTests.cs" />
     <Compile Include="Utils\TestRuntimeOwner.cs" />
