--- a/ZScriptTests/ZScriptTests.csproj
+++ b/ZScriptTests/ZScriptTests.csproj
@@ -81,6 +81,7 @@
     <Compile Include="CodeGeneration\Tokenization\IntermediaryTokenListTests.cs" />
     <Compile Include="CodeGeneration\Tokenization\PostfixExpressionTokenizerTests.cs" />
     <Compile Include="CodeGeneration\Tokenization\StatementTokenizerTests.cs" />
+    <Compile Include="Elements\OptionalTests.cs" />
     <Compile Include="Elements\TokenFactoryTests.cs" />
     <Compile Include="Elements\ZObjectTests.cs" />
     <Compile Include="Parsing\ConstantAtomParserTests.cs" />
@@ -96,6 +97,7 @@
     <Compile Include="Runtime\Execution\FunctionVmMemberTests.cs" />
     <Compile Include="Runtime\Execution\FunctionVmNewTests.cs" />
     <Compile Include="Runtime\Execution\FunctionVmObjectTests.cs" />
+    <Compile Include="Runtime\Execution\FunctionVmOptionalTests.cs" />
     <Compile Include="Runtime\Execution\FunctionVmSubscriptingTests.cs" />
     <Compile Include="Runtime\Execution\FunctionVmTests.cs" />
     <Compile Include="Runtime\Execution\VirtualMemory\MemoryTests.cs" />
