--- a/ZScriptTests/ZScriptTests.csproj
+++ b/ZScriptTests/ZScriptTests.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Runtime\Execution\FunctionVmArrayTests.cs" />
     <Compile Include="Runtime\Execution\FunctionVmCallableTests.cs" />
     <Compile Include="Runtime\Execution\FunctionVmDictionaryTests.cs" />
+    <Compile Include="Runtime\Execution\FunctionVmGenericsTests.cs" />
     <Compile Include="Runtime\Execution\FunctionVmMemberTests.cs" />
     <Compile Include="Runtime\Execution\FunctionVmNewTests.cs" />
     <Compile Include="Runtime\Execution\FunctionVmObjectTests.cs" />
