Starting implementation of basic generic parameter resolving

--- a/ZScriptTests/ZScriptTests.csproj
+++ b/ZScriptTests/ZScriptTests.csproj
@@ -64,6 +64,8 @@
     <Compile Include="CodeGeneration\Analysis\ControlFlowAnalyzerTests.cs" />
     <Compile Include="CodeGeneration\Analysis\CodeScopeTests.cs" />
     <Compile Include="CodeGeneration\Analysis\DefinitionsAnalyzerTests.cs" />
+    <Compile Include="CodeGeneration\Analysis\Definitions\GenericParametersAnalyzerTests.cs" />
+    <Compile Include="CodeGeneration\Analysis\Definitions\GenericParametersResolverTests.cs" />
     <Compile Include="CodeGeneration\Analysis\ExpressionTypeResolver+OptionalTests.cs" />
     <Compile Include="CodeGeneration\Analysis\FunctionParametersAnalyzerTests.cs" />
     <Compile Include="CodeGeneration\Analysis\StaticTypeAnalyzerTests.cs" />
