--- a/ZScript/ZScript.csproj
+++ b/ZScript/ZScript.csproj
@@ -54,6 +54,7 @@
     <Compile Include="CodeGeneration\Analysis\CodeScope.cs" />
     <Compile Include="CodeGeneration\Analysis\ControlFlowAnalyzer.cs" />
     <Compile Include="CodeGeneration\Analysis\Definitions\FunctionParametersAnalyzer.cs" />
+    <Compile Include="CodeGeneration\Analysis\Definitions\GenericSignatureAnalyzer.cs" />
     <Compile Include="CodeGeneration\Analysis\Definitions\UnusedDefinitionsAnalyzer.cs" />
     <Compile Include="CodeGeneration\Analysis\StaticTypeAnalyzer.cs" />
     <Compile Include="CodeGeneration\Analysis\ExpressionConstantResolver.cs" />
