--- a/ZScript/ZScript.csproj
+++ b/ZScript/ZScript.csproj
@@ -76,6 +76,7 @@
     <Compile Include="CodeGeneration\Tokenization\Helpers\TypedToken.cs" />
     <Compile Include="CodeGeneration\Tokenization\Helpers\TypedTokenExpander.cs" />
     <Compile Include="CodeGeneration\Tokenization\IntermediaryTokenList.cs" />
+    <Compile Include="CodeGeneration\Tokenization\Statements\ForEachStatementTokenizer.cs" />
     <Compile Include="Elements\Optional.cs" />
     <Compile Include="Elements\ZClass.cs" />
     <Compile Include="Elements\ZConstructor.cs" />
