. Renaming IntegerMemory -> LocalMemory . Updating some VM unit tests . Updating ForEach statement tokenization to better make use of the token factory class

--- a/ZScript/ZScript.csproj
+++ b/ZScript/ZScript.csproj
@@ -157,7 +157,7 @@
     <Compile Include="Parsing\ANTLR\ZScriptListener.cs" />
     <Compile Include="Parsing\ANTLR\ZScriptParser.cs" />
     <Compile Include="Runtime\Execution\FunctionVM.cs" />
-    <Compile Include="Runtime\Execution\VirtualMemory\IntegerMemory.cs" />
+    <Compile Include="Runtime\Execution\VirtualMemory\LocalMemory.cs" />
     <Compile Include="Runtime\Execution\Wrappers\IMemberWrapper.cs" />
     <Compile Include="Runtime\Execution\Wrappers\IndexedSubscripter.cs" />
     <Compile Include="Runtime\Execution\Wrappers\ISubscripterWrapper.cs" />
