Fixing labeled tuples not being compatible with equaly typed, non-labeled tuples

--- a/ZScriptTests/ZScriptTests.csproj
+++ b/ZScriptTests/ZScriptTests.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Runtime\Typing\Operators\IntegerOperatorTests.cs" />
     <Compile Include="Runtime\Typing\Operators\LongOperatorTests.cs" />
     <Compile Include="Runtime\Typing\OptionalTypeTests.cs" />
+    <Compile Include="Runtime\Typing\TupleTypeTests.cs" />
     <Compile Include="Runtime\Typing\TypeProviderTests.cs" />
     <Compile Include="Runtime\ZRuntimeTests.cs" />
     <Compile Include="Utils\TestRuntimeOwner.cs" />
